Fix: input fields not showing

--- a/docs/css/app-pages/event_creation.css
+++ b/docs/css/app-pages/event_creation.css
@@ -93,7 +93,6 @@ select {
 }
 
 #call-to-action-input-container {
-    display: none;
     flex-direction: column;
     gap: 12px;
 }
